--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "bos-workspace dev",
-    "build": "bos-workspace build"
+    "bw": "bos-workspace",
+    "dev": "bw dev",
+    "dev:testnet": "bw dev -n testnet",
+    "build": "bw build",
+    "build:testnet": "bw build -n testnet"
   },
-  "author": "",
+  "author": "nearbuilders",
   "license": "MIT",
   "dependencies": {
     "bos-workspace": "^0.0.1-alpha.4"
