--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "bw": "bos-workspace",
-    "dev": "bw dev",
-    "dev:testnet": "bw dev -n testnet",
-    "build": "bw build",
-    "build:testnet": "bw build -n testnet"
+    "dev": "bw ws dev",
+    "dev:testnet": "bw ws dev -n testnet",
+    "build": "bw ws build",
+    "build:testnet": "bw ws build -n testnet"
   },
   "author": "nearbuilders",
   "license": "MIT",
