--- a/.github/workflows/release-testnet.yml
+++ b/.github/workflows/release-testnet.yml
@@ -10,8 +10,8 @@ jobs:
       build-env: "testnet"
       deploy-env: "testnet"
       app-name: "embeds.near"
-      deploy-account-address: "embeds.testnet" // testnet account
+      deploy-account-address: "embeds.testnet"
       signer-account-address: "embeds.testnet"
-      signer-public-key: [PUBLIC_KEY] 
+      signer-public-key: ${{ vars.TESTNET_SIGNER_PUBLIC_KEY }}
     secrets:
-      SIGNER_PRIVATE_KEY: ${{ secrets.SIGNER_PRIVATE_KEY }} // then configure this in your Github/Settings/Actions
+      SIGNER_PRIVATE_KEY: ${{ secrets.TESTNET_SIGNER_PRIVATE_KEY }} // then configure this in your Github/Settings/Actions
